--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,6 +1,5 @@
-// Vendor
-// ---------------------------------
-
+@import "swiper/css";
+@import "swiper/css/pagination";
 @import "vendor/normalize";
 @import "./common/mixins";
 @import "./common/fonts";
