--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -1,5 +1,5 @@
 .hero {
-  background: linear-gradient(0deg, #342d25 6%, $backup-color 48%);
+  background: linear-gradient(0deg, $bg-grad 6%, $backup-color 48%);
 }
 
 .hero__wrapper {
@@ -67,11 +67,11 @@
     min-height: 985px;
   }
 
-  @media (width >= 768px) {
+  @media (min-width: $tablet-width) {
     min-height: 1034px;
   }
 
-  @media (width >= 940px) {
+  @media (min-width: $med-tab-width) {
     min-height: 800px;
     padding: 200px 120px 80px;
   }
@@ -83,7 +83,7 @@
   inset: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(112.1deg, rgba(15, 20, 41, 0.33) 17.23%, rgba(15, 20, 41, 0) 94.93%);
+  background: linear-gradient(112.1deg, $hero-bg-gr-1 17.23%, $hero-bg-gr-2 94.93%);
   z-index: 2;
 }
 
