--- a/source/sass/common/variables.scss
+++ b/source/sass/common/variables.scss
@@ -16,6 +16,8 @@ $bg-grad: #342d25;
 $active-color: #1c3374;
 $pag-hov-col: #d9d9d9;
 $error: #ff121f;
+$hero-bg-gr-1: rgba(15, 20, 41, 0.33);
+$hero-bg-gr-2: rgba(15, 20, 41, 0);
 
 // расширения
 $desktop-width: 1440px;
